blog-page-update

--- a/individual-articale.html
+++ b/individual-articale.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
-    <link rel="stylesheet" href="./assets/circle-sec.css">
+    <link rel="stylesheet" href="./assets/contact-form.css">
+    <link rel="stylesheet" href="./assets/excess-sec.css">
     <title>Document</title>
 </head>
 
@@ -50,7 +51,7 @@
         </div>
     </header>
 
-    <section style="background-color: var(--gray-light); padding: clamp(40px, 5vw, 48px) 0;" class="hero-sec">
+    <section class="hero-sec pb-0">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center fs-14 gap-1 mb-3">
                 <a href="/" style="color: #676767;" class="font-neueplak-regular d-block">Home
@@ -59,67 +60,110 @@
                     <img src="./assets/breadcrum-arrow.svg" width="14" height="8" alt="arrow-icon"></a>
                 <span class="d-block text-primary font-neueplak-semibold">The Bare Metal Journal</span>
             </div>
-            <h1 class="main-title">Articles from Alta Technologies</h1>
+            <h1 class="main-title mb-3">The Ultimate Guide to Refurbished Servers</h1>
+            <img style="max-width: 1080px; border-radius: 8px;" src="./assets/individual-hero-img.webp"
+                class="img-fluid d-block" width="1080" height="375" alt="hero-image">
         </div>
     </section>
-    <section class="ideal-sec pb-0">
+    <section class="contact-sec-1 pb-0">
         <div class="container">
-            <h2 class="main-title text-primary mb-5">Articles on Refurbished Servers:</h2>
-            <div class="row g-2">
-                <div class="col-sm-6 col-lg-3">
-                    <div class="card-1">
-                        <img src="./assets/press-img-1.webp" class="img-fluid d-block" width="347" height="201"
-                            alt="press-blog-image">
-                        <div class="content-wrapper">
-                            <span style="color: black;" class="fs-18 fw-bold d-block mb-1">The Ultimate Guide to
-                                Refurbished Servers</span>
-                            <a href="#" class="btn-arrow d-block">Learn More<img src="./assets/right-arrow.svg"
-                                    width="16" height="16" alt="arrow-icon"></a>
+            <div class="row g-3">
+                <div class="col-lg-9">
+                    <h2 class="main-title text-primary">The Evolution of the Refurbished Server Industry</h2>
+                    <p>Starting in the early 1970s, IT users began trading previously used servers and parts from one
+                        institution or business to another.</p>
+                    <p>What began as informal barter and trade of systems, has exploded into a billion dollar industry
+                        of resellers and marketplaces, with tens of thousands of IT environments taking advantage of the
+                        benefits of refurbished server equipment. </p>
+                    <p>Do you want to learn more about what to look for in refurbished hardware, how the industry works
+                        and to know more about the great reliability and savings you can find when buying refurb? You’ve
+                        come to the right place!</p>
+                    <p>Alta has been in this industry since the mid-1990s and pioneered much of the modern
+                        approach to enterprise IT reuse and resale. I'm the President at Alta and a reuse advocate. I
+                        collected the stories of this market's origins and know all the ins and outs of server
+                        refurbishment. I look forward to sharing these insights with you here.</p>
+                    <p>I have divided this guide into multiple sections. Dive into each sub-article below to learn about
+                        each are of the used server trade.</p>
+                    <p><b>Read the sub-articles linked above for my take on each of these topics, as a part of our 2024
+                            Ultimate Guide to Refurbished Servers. Alternately, below is the basic TLDR:</b></p>
+                    <p><b>Summary:</b> Refurbished Servers are typically decommissioned from data centers just like
+                        yours, in great working condition and need little work, other than reconfiguring them to meet
+                        your exact needs.</p>
+                    <p>The word <b>"Refurbished"</b> can have many different meanings from used and working to upgraded,
+                        to fully repaired (rare). Work with long-standing trusted providers offering guarantees,
+                        documented standards, and years of expertise, to be guided towards the sustainability and
+                        savings benefits of refurbished servers and parts.</p>
+                    <p><b>Last Updated:</b> 04/03/2024 </p>
+                    <p class="mb-0">- Bookmark this page to check back for updates in the months and years ahead.</p>
+                </div>
+                <div class="col-lg-3">
+                    <div class="d-flex align-items-center gap-2 mb-2">
+                        <div style="gap: 4px;" class="d-flex align-items-center justify-content-center">
+                            <span class="text-primary fs-18 fw-bold">Share:</span>
+                            <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
+                                    alt="social-icons"></a>
+                            <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
+                                    alt="social-icons"></a>
+                            <a href="#">
+                                <img src="./assets/products-facebook.svg" width="30" height="30" alt="social-icons">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/products-envelop.svg" width="30" height="30" alt="social-icons">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/products-youtube.svg" width="30" height="30" alt="social-icons">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="contact-form contact-form-1">
+                        <span class="d-block fw-bold fs-20 text-center text-primary mb-1">Your Feedback
+                            Matters!</span>
+                        <div class="input-wrapper mb-0">
+                            <input type="text" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="input-wrapper mb-0">
+                            <input type="email" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="input-wrapper mb-0">
+                            <input type="number" class="form-control" placeholder="Phone Number">
+                        </div>
+                        <div class="input-wrapper">
+                            <textarea rows="4" class="form-control" placeholder="Leave comments here..."></textarea>
+                        </div>
+                        <button style="max-width: unset; width: 100%;" class="btn btn-primary">Submit Now</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="excess-sec pb-0">
+        <div class="container">
+            <div style="background-color: var(--primary-light);" class="content-wrapper">
+                <div style="max-width: 650px;" class="order-lg-2">
+                    <h2 class="main-title">We buy your Excess Hardware</h2>
+                    <p>Do you have equipment to trade in - we can offer cash or apply that as credit towards other
+                        purchases.</p>
+                    <p class="font-neueplak-semibold">Alta is always buying excess IT</p>
+                    <div class="d-flex align-items-center gap-2 flex-wrap">
+                        <a style="text-decoration: underline;" href="mailto:buyers@altatechnologies.com"
+                            class="btn btn-primary d-block">buyers@altatechnologies.com</a>
+                        <div class="d-flex align-items-center gap-1 flex-wrap">
+                            <img src="./assets/phone-primary.svg" width="16" height="16" alt="phone-icon">
+                            <a  href="tel:+7634752900" style="margin-right: 8px; padding-right: 8px; border-right: 1px solid var(--primary);" class="fw-bold">763-475-2900</a>
+                            <a  href="tel:+8005462582" class="fw-bold">800-546-2582</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="card-1">
-                        <img src="./assets/press-img-1.webp" class="img-fluid d-block" width="347" height="201"
-                            alt="press-blog-image">
-                        <div class="content-wrapper">
-                            <span style="color: black;" class="fs-18 fw-bold d-block mb-1">The Ultimate Guide to
-                                Refurbished Servers</span>
-                            <a href="#" class="btn-arrow d-block">Learn More<img src="./assets/right-arrow.svg"
-                                    width="16" height="16" alt="arrow-icon"></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="card-1">
-                        <img src="./assets/press-img-1.webp" class="img-fluid d-block" width="347" height="201"
-                            alt="press-blog-image">
-                        <div class="content-wrapper">
-                            <span style="color: black;" class="fs-18 fw-bold d-block mb-1">The Ultimate Guide to
-                                Refurbished Servers</span>
-                            <a href="#" class="btn-arrow d-block">Learn More<img src="./assets/right-arrow.svg"
-                                    width="16" height="16" alt="arrow-icon"></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="card-1">
-                        <img src="./assets/press-img-1.webp" class="img-fluid d-block" width="347" height="201"
-                            alt="press-blog-image">
-                        <div class="content-wrapper">
-                            <span style="color: black;" class="fs-18 fw-bold d-block mb-1">The Ultimate Guide to
-                                Refurbished Servers</span>
-                            <a href="#" class="btn-arrow d-block">Learn More<img src="./assets/right-arrow.svg"
-                                    width="16" height="16" alt="arrow-icon"></a>
-                        </div>
-                    </div>
+                <div class="order-lg-1">
+                    <img style="max-width: 316px;" src="./assets/products-img-3.webp" class="img-fluid mx-auto d-block"
+                        width="316" height="291" alt="products-image-3">
                 </div>
             </div>
         </div>
     </section>
     <section class="ideal-sec">
         <div class="container">
-            <h2 class="main-title text-primary mb-5">Articles on Refurbished Servers:</h2>
+            <h2 class="main-title text-primary text-center mb-5">Articles on Refurbished Servers:</h2>
             <div class="row g-2">
                 <div class="col-sm-6 col-lg-3">
                     <div class="card-1">
@@ -172,83 +216,37 @@
             </div>
         </div>
     </section>
-    <section style="background-color: var(--primary-light);" class="circle-sec">
+    <section style="background-color: var(--primary-light);" class="half-sec content-right">
         <div class="container">
-            <h2 class="main-title text-center mb-5">Our Contributors</h2>
-            <div class="row g-5">
-                <div class="col-lg-4 col-xs-6">
-                    <div style="max-width: 255px;" class="content-wrapper mx-auto text-center">
-                        <img src="./assets/contributor-img-1.webp" class="img-fluid d-block mx-auto mb-2 circle-image" width="255"
-                            height="255" alt="circle-image">
-                        <p class="text-primary fw-bold mb-0">Author</p>
-                        <span class="d-block font-neueplak-text-bold">Corey Donovan</span>
-                        <p>Corey is a reuse advocate with 20 years experience in ITAD and serves as President of Alta
-                            Technologies, the gold standard for quality in testing and refurbishing servers, networking
-                            and data storage hardware, since 1995.</p>
-                            <div style="gap: 4px;" class="d-flex justify-content-center">
-                                <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#">
-                                    <img src="./assets/products-facebook.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/products-envelop.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                            </div>
-                    </div>
+            <div class="row gy-lg-0 gy-3">
+                <div class="col-lg-6">
+                    <img style="max-width: 438px;" src="./assets/contributor-inner-img-1.webp"
+                        class="img-fluid d-block mx-auto" width="438" height="438" alt="press-blog-image">
                 </div>
-                <div class="col-lg-4 col-xs-6">
-                    <div style="max-width: 255px;" class="content-wrapper mx-auto text-center">
-                        <img src="./assets/contributor-img-1.webp" class="img-fluid d-block mx-auto mb-2 circle-image" width="255"
-                            height="255" alt="circle-image">
-                        <p class="text-primary fw-bold mb-0">Author</p>
-                        <span class="d-block font-neueplak-text-bold">Corey Donovan</span>
+                <div class="col-lg-6">
+                    <div class="content-wrapper">
+                        <span class="fw-bold fs-20 text-primary">Author</span>
+                        <h2 class="main-title">Corey Donovan</h2>
                         <p>Corey is a reuse advocate with 20 years experience in ITAD and serves as President of Alta
                             Technologies, the gold standard for quality in testing and refurbishing servers, networking
                             and data storage hardware, since 1995.</p>
-                            <div style="gap: 4px;" class="d-flex justify-content-center">
+                        <p>An active member of the Right-To-Repair movement, Corey also serves on the ASCDI Board, is a
+                            member of the Forbes Business Council, Vistage, SIA and UNEDA. He enjoys local adventures
+                            with his family and dog, Freya, near Minneapolis, MN.</p>
+                        <div class="d-flex align-items-center gap-2">
+                            <a href="#" class="btn btn-primary d-block">Email Corey <img style="margin-left: 4px;"
+                                    src="./assets/envelop-white.svg" width="19" height="13" alt="mail-icon"></a>
+                            <div style="gap: 4px;" class="d-flex align-items-center justify-content-center">
+                                <span class="text-primary">Follow:</span>
                                 <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
                                         alt="social-icons"></a>
                                 <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
                                         alt="social-icons"></a>
                                 <a href="#">
-                                    <img src="./assets/products-facebook.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/products-envelop.svg" width="30" height="30"
-                                        alt="social-icons">
+                                    <img src="./assets/products-facebook.svg" width="30" height="30" alt="social-icons">
                                 </a>
                             </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-6">
-                    <div style="max-width: 255px;" class="content-wrapper mx-auto text-center">
-                        <img src="./assets/contributor-img-1.webp" class="img-fluid d-block mx-auto mb-2 circle-image" width="255"
-                            height="255" alt="circle-image">
-                        <p class="text-primary fw-bold mb-0">Author</p>
-                        <span class="d-block font-neueplak-text-bold">Corey Donovan</span>
-                        <p>Corey is a reuse advocate with 20 years experience in ITAD and serves as President of Alta
-                            Technologies, the gold standard for quality in testing and refurbishing servers, networking
-                            and data storage hardware, since 1995.</p>
-                            <div style="gap: 4px;" class="d-flex justify-content-center">
-                                <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#">
-                                    <img src="./assets/products-facebook.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/products-envelop.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
