--- a/articales-inner.html
+++ b/articales-inner.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
-    <link rel="stylesheet" href="./assets/circle-sec.css">
     <title>Document</title>
 </head>
 
@@ -172,83 +171,37 @@
             </div>
         </div>
     </section>
-    <section style="background-color: var(--primary-light);" class="circle-sec">
+    <section style="background-color: var(--primary-light);" class="half-sec content-right">
         <div class="container">
-            <h2 class="main-title text-center mb-5">Our Contributors</h2>
-            <div class="row g-5">
-                <div class="col-lg-4 col-xs-6">
-                    <div style="max-width: 255px;" class="content-wrapper mx-auto text-center">
-                        <img src="./assets/contributor-img-1.webp" class="img-fluid d-block mx-auto mb-2 circle-image" width="255"
-                            height="255" alt="circle-image">
-                        <p class="text-primary fw-bold mb-0">Author</p>
-                        <span class="d-block font-neueplak-text-bold">Corey Donovan</span>
-                        <p>Corey is a reuse advocate with 20 years experience in ITAD and serves as President of Alta
-                            Technologies, the gold standard for quality in testing and refurbishing servers, networking
-                            and data storage hardware, since 1995.</p>
-                            <div style="gap: 4px;" class="d-flex justify-content-center">
-                                <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#">
-                                    <img src="./assets/products-facebook.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/products-envelop.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                            </div>
-                    </div>
+            <div class="row gy-lg-0 gy-3">
+                <div class="col-lg-6">
+                    <img style="max-width: 438px;" src="./assets/contributor-inner-img-1.webp"
+                        class="img-fluid d-block mx-auto" width="438" height="438" alt="press-blog-image">
                 </div>
-                <div class="col-lg-4 col-xs-6">
-                    <div style="max-width: 255px;" class="content-wrapper mx-auto text-center">
-                        <img src="./assets/contributor-img-1.webp" class="img-fluid d-block mx-auto mb-2 circle-image" width="255"
-                            height="255" alt="circle-image">
-                        <p class="text-primary fw-bold mb-0">Author</p>
-                        <span class="d-block font-neueplak-text-bold">Corey Donovan</span>
+                <div class="col-lg-6">
+                    <div class="content-wrapper">
+                        <span class="fw-bold fs-20 text-primary">Author</span>
+                        <h2 class="main-title">Corey Donovan</h2>
                         <p>Corey is a reuse advocate with 20 years experience in ITAD and serves as President of Alta
                             Technologies, the gold standard for quality in testing and refurbishing servers, networking
                             and data storage hardware, since 1995.</p>
-                            <div style="gap: 4px;" class="d-flex justify-content-center">
+                        <p>An active member of the Right-To-Repair movement, Corey also serves on the ASCDI Board, is a
+                            member of the Forbes Business Council, Vistage, SIA and UNEDA. He enjoys local adventures
+                            with his family and dog, Freya, near Minneapolis, MN.</p>
+                        <div class="d-flex align-items-center gap-2">
+                            <a href="#" class="btn btn-primary d-block">Email Corey <img style="margin-left: 4px;"
+                                    src="./assets/envelop-white.svg" width="19" height="13" alt="mail-icon"></a>
+                            <div style="gap: 4px;" class="d-flex align-items-center justify-content-center">
+                                <span class="text-primary">Follow:</span>
                                 <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
                                         alt="social-icons"></a>
                                 <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
                                         alt="social-icons"></a>
                                 <a href="#">
-                                    <img src="./assets/products-facebook.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/products-envelop.svg" width="30" height="30"
-                                        alt="social-icons">
+                                    <img src="./assets/products-facebook.svg" width="30" height="30" alt="social-icons">
                                 </a>
                             </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-6">
-                    <div style="max-width: 255px;" class="content-wrapper mx-auto text-center">
-                        <img src="./assets/contributor-img-1.webp" class="img-fluid d-block mx-auto mb-2 circle-image" width="255"
-                            height="255" alt="circle-image">
-                        <p class="text-primary fw-bold mb-0">Author</p>
-                        <span class="d-block font-neueplak-text-bold">Corey Donovan</span>
-                        <p>Corey is a reuse advocate with 20 years experience in ITAD and serves as President of Alta
-                            Technologies, the gold standard for quality in testing and refurbishing servers, networking
-                            and data storage hardware, since 1995.</p>
-                            <div style="gap: 4px;" class="d-flex justify-content-center">
-                                <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#">
-                                    <img src="./assets/products-facebook.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/products-envelop.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
