--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
-    <link rel="stylesheet" href="./assets/circle-sec.css">
+    <link rel="stylesheet" href="./assets/contact-form.css">
+    <link rel="stylesheet" href="./assets/excess-sec.css">
+    <link rel="stylesheet" href="./assets/guide-sec.css">
     <title>Document</title>
 </head>
 
@@ -57,69 +59,126 @@
                     <img src="./assets/breadcrum-arrow.svg" width="14" height="8" alt="arrow-icon"></a>
                 <a href="/" style="color: #676767;" class="font-neueplak-regular d-block">blogs
                     <img src="./assets/breadcrum-arrow.svg" width="14" height="8" alt="arrow-icon"></a>
-                <span class="d-block text-primary font-neueplak-semibold">The Bare Metal Journal</span>
+                <span class="d-block text-primary font-neueplak-semibold">Contact us</span>
             </div>
-            <h1 class="main-title">Articles from Alta Technologies</h1>
+            <h1 style="max-width: 387px;" class="main-title">The Bare Metal Journal</h1>
         </div>
     </section>
-    <section class="ideal-sec pb-0">
+    <section class="contact-sec-1 guide-sec pb-0">
         <div class="container">
-            <h2 class="main-title text-primary mb-5">Articles on Refurbished Servers:</h2>
             <div class="row g-2">
-                <div class="col-sm-6 col-lg-3">
-                    <div class="card-1">
-                        <img src="./assets/press-img-1.webp" class="img-fluid d-block" width="347" height="201"
-                            alt="press-blog-image">
+                <div class="col-lg-9">
+                    <div class="card-2 d-flex gap-1 mb-2">
+                        <img style="border-radius: 8px;" src="./assets/home-guide-sec-img.webp" class="img-fluid"
+                            width="330" height="228" alt="guide-image">
                         <div class="content-wrapper">
-                            <span style="color: black;" class="fs-18 fw-bold d-block mb-1">The Ultimate Guide to
-                                Refurbished Servers</span>
-                            <a href="#" class="btn-arrow d-block">Learn More<img src="./assets/right-arrow.svg"
-                                    width="16" height="16" alt="arrow-icon"></a>
+                            <span style="color: black;" class="fs-22 d-block fw-bold mb-1">Everything You Need to Know
+                                About
+                                Laptop Hard Drive Upgrades</span>
+                            <div class="d-flex align-items-center gap-1 mb-1">
+                                <img src="./assets/date-icon.svg" width="12" height="12" alt="date-icon">
+                                <span style="font-size: 12px;" class="d-block fw-bold">Jul 21, 2024</span>
+                            </div>
+                            <p class="mb-2">If you run a business today, or manage the IT, chances are you rely on
+                                servers in some capacity. But servers can be crazy expensive, whether on prem or
+                                cloud-based. You...</p>
+                            <a href="#" class="btn-arrow">Read More<img src="./assets/right-arrow.svg" width="16"
+                                    height="16" alt="arrow-icon"></a>
+                        </div>
+                    </div>
+                    <div class="card-2 d-flex gap-1">
+                        <img style="border-radius: 8px;" src="./assets/home-guide-sec-img.webp" class="img-fluid"
+                            width="330" height="228" alt="guide-image">
+                        <div class="content-wrapper">
+                            <span style="color: black;" class="fs-22 d-block fw-bold mb-1">Everything You Need to Know
+                                About
+                                Laptop Hard Drive Upgrades</span>
+                            <div class="d-flex align-items-center gap-1 mb-1">
+                                <img src="./assets/date-icon.svg" width="12" height="12" alt="date-icon">
+                                <span style="font-size: 12px;" class="d-block fw-bold">Jul 21, 2024</span>
+                            </div>
+                            <p class="mb-2">If you run a business today, or manage the IT, chances are you rely on
+                                servers in some capacity. But servers can be crazy expensive, whether on prem or
+                                cloud-based. You...</p>
+                            <a href="#" class="btn-arrow">Read More<img src="./assets/right-arrow.svg" width="16"
+                                    height="16" alt="arrow-icon"></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="card-1">
-                        <img src="./assets/press-img-1.webp" class="img-fluid d-block" width="347" height="201"
-                            alt="press-blog-image">
-                        <div class="content-wrapper">
-                            <span style="color: black;" class="fs-18 fw-bold d-block mb-1">The Ultimate Guide to
-                                Refurbished Servers</span>
-                            <a href="#" class="btn-arrow d-block">Learn More<img src="./assets/right-arrow.svg"
-                                    width="16" height="16" alt="arrow-icon"></a>
+                <div class="col-lg-3">
+                    <div class="contact-form contact-form-1 mb-2">
+                        <span class="d-block fw-bold fs-20 text-center text-primary mb-1">Your Feedback
+                            Matters!</span>
+                        <div class="input-wrapper mb-0">
+                            <input type="text" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="input-wrapper mb-0">
+                            <input type="email" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="input-wrapper mb-0">
+                            <input type="number" class="form-control" placeholder="Phone Number">
+                        </div>
+                        <div class="input-wrapper">
+                            <textarea rows="4" class="form-control" placeholder="Leave comments here..."></textarea>
+                        </div>
+                        <button style="max-width: unset; width: 100%;" class="btn btn-primary">Submit Now</button>
+                    </div>
+                    <div class="card-2">
+                        <span class="d-block fw-bold fs-20 text-center text-primary mb-1">Recent Posts</span>
+                        <div style="gap: 2px;" class="card-3 d-flex align-items-center mb-1">
+                            <img style="border-radius: 8px;" src="./assets/home-guide-sec-img.webp"
+                                width="80" height="80" alt="guide-image">
+                            <div class="content-wrapper">
+                                <span style="color: black; font-size: 12px;" class="d-block fw-bold">Protecting Your Skin Naturally;  Best Chinese Herbs for Skincare...</span>
+                                <a style="font-size: 12px;" href="#" class="btn-arrow">Read More<img src="./assets/right-arrow.svg" width="12" height="12" alt="arrow-icon"></a>
+                            </div>
+                        </div>
+                        <div style="gap: 2px;" class="card-3 d-flex align-items-center">
+                            <img style="border-radius: 8px;" src="./assets/home-guide-sec-img.webp"
+                                width="80" height="80" alt="guide-image">
+                            <div class="content-wrapper">
+                                <span style="color: black; font-size: 12px;" class="d-block fw-bold">Protecting Your Skin Naturally;  Best Chinese Herbs for Skincare...</span>
+                                <a style="font-size: 12px;" href="#" class="btn-arrow">Read More<img src="./assets/right-arrow.svg" width="12" height="12" alt="arrow-icon"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-2">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="excess-sec pb-0">
+        <div class="container">
+            <div style="background-color: var(--primary-light);" class="content-wrapper">
+                <div style="max-width: 650px;" class="order-lg-2">
+                    <h2 class="main-title">We buy your Excess Hardware</h2>
+                    <p>Do you have equipment to trade in - we can offer cash or apply that as credit towards other
+                        purchases.</p>
+                    <p class="font-neueplak-semibold">Alta is always buying excess IT</p>
+                    <div class="d-flex align-items-center gap-2 flex-wrap">
+                        <a style="text-decoration: underline;" href="mailto:buyers@altatechnologies.com"
+                            class="btn btn-primary d-block">buyers@altatechnologies.com</a>
+                        <div class="d-flex align-items-center gap-1 flex-wrap">
+                            <img src="./assets/phone-primary.svg" width="16" height="16" alt="phone-icon">
+                            <a href="tel:+7634752900"
+                                style="margin-right: 8px; padding-right: 8px; border-right: 1px solid var(--primary);"
+                                class="fw-bold">763-475-2900</a>
+                            <a href="tel:+8005462582" class="fw-bold">800-546-2582</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="card-1">
-                        <img src="./assets/press-img-1.webp" class="img-fluid d-block" width="347" height="201"
-                            alt="press-blog-image">
-                        <div class="content-wrapper">
-                            <span style="color: black;" class="fs-18 fw-bold d-block mb-1">The Ultimate Guide to
-                                Refurbished Servers</span>
-                            <a href="#" class="btn-arrow d-block">Learn More<img src="./assets/right-arrow.svg"
-                                    width="16" height="16" alt="arrow-icon"></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="card-1">
-                        <img src="./assets/press-img-1.webp" class="img-fluid d-block" width="347" height="201"
-                            alt="press-blog-image">
-                        <div class="content-wrapper">
-                            <span style="color: black;" class="fs-18 fw-bold d-block mb-1">The Ultimate Guide to
-                                Refurbished Servers</span>
-                            <a href="#" class="btn-arrow d-block">Learn More<img src="./assets/right-arrow.svg"
-                                    width="16" height="16" alt="arrow-icon"></a>
-                        </div>
-                    </div>
+                <div class="order-lg-1">
+                    <img style="max-width: 316px;" src="./assets/products-img-3.webp" class="img-fluid mx-auto d-block"
+                        width="316" height="291" alt="products-image-3">
                 </div>
             </div>
         </div>
     </section>
     <section class="ideal-sec">
         <div class="container">
-            <h2 class="main-title text-primary mb-5">Articles on Refurbished Servers:</h2>
+            <h2 class="main-title text-primary text-center mb-5">Articles on Refurbished Servers:</h2>
             <div class="row g-2">
                 <div class="col-sm-6 col-lg-3">
                     <div class="card-1">
@@ -172,83 +231,37 @@
             </div>
         </div>
     </section>
-    <section style="background-color: var(--primary-light);" class="circle-sec">
+    <section style="background-color: var(--primary-light);" class="half-sec content-right">
         <div class="container">
-            <h2 class="main-title text-center mb-5">Our Contributors</h2>
-            <div class="row g-5">
-                <div class="col-lg-4 col-xs-6">
-                    <div style="max-width: 255px;" class="content-wrapper mx-auto text-center">
-                        <img src="./assets/contributor-img-1.webp" class="img-fluid d-block mx-auto mb-2 circle-image" width="255"
-                            height="255" alt="circle-image">
-                        <p class="text-primary fw-bold mb-0">Author</p>
-                        <span class="d-block font-neueplak-text-bold">Corey Donovan</span>
-                        <p>Corey is a reuse advocate with 20 years experience in ITAD and serves as President of Alta
-                            Technologies, the gold standard for quality in testing and refurbishing servers, networking
-                            and data storage hardware, since 1995.</p>
-                            <div style="gap: 4px;" class="d-flex justify-content-center">
-                                <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#">
-                                    <img src="./assets/products-facebook.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/products-envelop.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                            </div>
-                    </div>
+            <div class="row gy-lg-0 gy-3">
+                <div class="col-lg-6">
+                    <img style="max-width: 438px;" src="./assets/contributor-inner-img-1.webp"
+                        class="img-fluid d-block mx-auto" width="438" height="438" alt="press-blog-image">
                 </div>
-                <div class="col-lg-4 col-xs-6">
-                    <div style="max-width: 255px;" class="content-wrapper mx-auto text-center">
-                        <img src="./assets/contributor-img-1.webp" class="img-fluid d-block mx-auto mb-2 circle-image" width="255"
-                            height="255" alt="circle-image">
-                        <p class="text-primary fw-bold mb-0">Author</p>
-                        <span class="d-block font-neueplak-text-bold">Corey Donovan</span>
+                <div class="col-lg-6">
+                    <div class="content-wrapper">
+                        <span class="fw-bold fs-20 text-primary">Author</span>
+                        <h2 class="main-title">Corey Donovan</h2>
                         <p>Corey is a reuse advocate with 20 years experience in ITAD and serves as President of Alta
                             Technologies, the gold standard for quality in testing and refurbishing servers, networking
                             and data storage hardware, since 1995.</p>
-                            <div style="gap: 4px;" class="d-flex justify-content-center">
+                        <p>An active member of the Right-To-Repair movement, Corey also serves on the ASCDI Board, is a
+                            member of the Forbes Business Council, Vistage, SIA and UNEDA. He enjoys local adventures
+                            with his family and dog, Freya, near Minneapolis, MN.</p>
+                        <div class="d-flex align-items-center gap-2">
+                            <a href="#" class="btn btn-primary d-block">Email Corey <img style="margin-left: 4px;"
+                                    src="./assets/envelop-white.svg" width="19" height="13" alt="mail-icon"></a>
+                            <div style="gap: 4px;" class="d-flex align-items-center justify-content-center">
+                                <span class="text-primary">Follow:</span>
                                 <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
                                         alt="social-icons"></a>
                                 <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
                                         alt="social-icons"></a>
                                 <a href="#">
-                                    <img src="./assets/products-facebook.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/products-envelop.svg" width="30" height="30"
-                                        alt="social-icons">
+                                    <img src="./assets/products-facebook.svg" width="30" height="30" alt="social-icons">
                                 </a>
                             </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-6">
-                    <div style="max-width: 255px;" class="content-wrapper mx-auto text-center">
-                        <img src="./assets/contributor-img-1.webp" class="img-fluid d-block mx-auto mb-2 circle-image" width="255"
-                            height="255" alt="circle-image">
-                        <p class="text-primary fw-bold mb-0">Author</p>
-                        <span class="d-block font-neueplak-text-bold">Corey Donovan</span>
-                        <p>Corey is a reuse advocate with 20 years experience in ITAD and serves as President of Alta
-                            Technologies, the gold standard for quality in testing and refurbishing servers, networking
-                            and data storage hardware, since 1995.</p>
-                            <div style="gap: 4px;" class="d-flex justify-content-center">
-                                <a href="#"><img src="./assets/products-twitter.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#"><img src="./assets/products-linkdin-icon.svg" width="30" height="30"
-                                        alt="social-icons"></a>
-                                <a href="#">
-                                    <img src="./assets/products-facebook.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                                <a href="#">
-                                    <img src="./assets/products-envelop.svg" width="30" height="30"
-                                        alt="social-icons">
-                                </a>
-                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
